--- a/tasks/declare_script_each.yml
+++ b/tasks/declare_script_each.yml
@@ -9,6 +9,7 @@
     force_basic_auth: true
     status_code: 204,404
     validate_certs: "{{ nexus_api_validate_certs }}"
+  tags: nexus-provisioning
 
 - name: Declaring Groovy script {{ item }}
   ansible.builtin.uri:
@@ -25,3 +26,4 @@
       name: "{{ item }}"
       type: groovy
       content: "{{ lookup('file', 'groovy/' + item + '.groovy') }}"
+  tags: nexus-provisioning
