--- a/molecule/postgres-converge.yml
+++ b/molecule/postgres-converge.yml
@@ -3,6 +3,7 @@
   hosts: nexus
   roles:
     - role: nexus3-pro
+      tags: provision-api
   vars_files:
     - ssl-{{ ansible_os_family }}.yml
     - nexus_common_test_vars.yml
