--- a/molecule/default-converge.yml
+++ b/molecule/default-converge.yml
@@ -7,6 +7,10 @@
     - ssl-{{ ansible_os_family }}.yml
     - nexus_common_test_vars.yml
     - nexus_ldap_test_vars.yml
+    - teams.yml
+    - repo-defaults.yml
+    - .nexus-downloads/hosted-result.yml
+    # - .nexus-downloads/proxies-result.yml
 
   environment:
     http_proxy: "{{ lookup('env', 'http_proxy') }}"
