--- a/molecule/default-converge.yml
+++ b/molecule/default-converge.yml
@@ -10,7 +10,7 @@
     - teams.yml
     - repo-defaults.yml
     - .nexus-downloads/hosted-result.yml
-    # - .nexus-downloads/proxies-result.yml
+    - .nexus-downloads/proxies-result.yml
 
   environment:
     http_proxy: "{{ lookup('env', 'http_proxy') }}"
