--- a/molecule/repo-defaults.yml
+++ b/molecule/repo-defaults.yml
@@ -109,267 +109,268 @@ hosted_defaults:
     deployPolicy: strict # strict or permissive
 
 proxy_defaults:
-  maven:
-    - name: maven-central
-      format: maven2
-      online: true
-      blocked: false
-      auto_block: true
-      remote:
-        url: https://repo.maven.apache.org/maven2
-        username:
-        password:
-      connection:
-        useTrustStore: false
-        retries:
-        user_agent_suffix:
-        enable_cookies:
-        enable_circular_redirects:
-        timeout:
-      maximum_component_age:
-      maximum_metadata_age:
-      negative_cache_enabled:
-      negative_cache_ttl:
-      cleanup_policies:
-        - policy-1
-      version_policy:
-      layout_policy:
-      content_disposition:
+  maven2:
+    name: maven-central
+    format: maven2
+    online: true
+    blocked: false
+    auto_block: true
+    blob_store: blob-mvn
+    strict_content_validation: true
+    remote:
+      url: https://repo.maven.apache.org/maven2
+      username: ''
+      password: ''
+    connection:
+      retries: 5
+      user_agent_suffix: ''
+      enable_cookies: false
+      enable_circular_redirects: false
+      timeout: ''
+    maximum_component_age: -1
+    maximum_metadata_age: 1440
+    negative_cache_enabled: true
+    negative_cache_ttl: 1440
+    version_policy: release
+    layout_policy: strict
+    write_policy: allow_once
+    content_disposition: inline
+    cleanup_policies:
+      - mvn_cleanup
   python:
-    - name: pypi-central
-      format: pypi
-      online: true
-      blocked: false
-      auto_block: true
-      remote:
-        url: https://pypi.org/simple
-        username:
-        password:
-      connection:
-        useTrustStore: false
-        retries:
-        user_agent_suffix:
-        enable_cookies:
-        enable_circular_redirects:
-        timeout:
-      maximum_component_age:
-      maximum_metadata_age:
-      negative_cache_enabled:
-      negative_cache_ttl:
-      cleanup_policies:
-        - policy-1
+    name: pypi-central
+    format: pypi
+    online: true
+    blocked: false
+    auto_block: true
+    remote:
+      url: https://pypi.org/simple
+      username:
+      password:
+    connection:
+      useTrustStore: false
+      retries:
+      user_agent_suffix:
+      enable_cookies:
+      enable_circular_redirects:
+      timeout:
+    maximum_component_age:
+    maximum_metadata_age:
+    negative_cache_enabled:
+    negative_cache_ttl:
+    cleanup_policies:
+      - policy-1
   npm:
-    - name: npm-registry
-      format: npm
-      online: true
-      blocked: false
-      auto_block: true
-      remote:
-        url: https://registry.npmjs.org/
-        username:
-        password:
-        bearerToken:
-      connection:
-        useTrustStore: false
-        retries:
-        user_agent_suffix:
-        enable_cookies:
-        enable_circular_redirects:
-        timeout:
-      maximum_component_age:
-      maximum_metadata_age:
-      negative_cache_enabled:
-      negative_cache_ttl:
-      cleanup_policies:
-        - policy-1
+    name: npm-registry
+    format: npm
+    online: true
+    blocked: false
+    auto_block: true
+    remote:
+      url: https://registry.npmjs.org/
+      username:
+      password:
+      bearerToken:
+    connection:
+      useTrustStore: false
+      retries:
+      user_agent_suffix:
+      enable_cookies:
+      enable_circular_redirects:
+      timeout:
+    maximum_component_age:
+    maximum_metadata_age:
+    negative_cache_enabled:
+    negative_cache_ttl:
+    cleanup_policies:
+      - policy-1
   nuget:
-    - name: nuget-gallery
-      format: nuget
-      online: true
-      blocked: false
-      auto_block: true
-      nuget_version: v3
-      remote:
-        url: https://api.nuget.org/v3/index.json
-        username:
-        password:
-      connection:
-        useTrustStore: false
-        retries:
-        user_agent_suffix:
-        enable_cookies:
-        enable_circular_redirects:
-        timeout:
-      maximum_component_age:
-      maximum_metadata_age:
-      negative_cache_enabled:
-      negative_cache_ttl:
-      cleanup_policies:
-        - policy-1
+    name: nuget-gallery
+    format: nuget
+    online: true
+    blocked: false
+    auto_block: true
+    nuget_version: v3
+    remote:
+      url: https://api.nuget.org/v3/index.json
+      username:
+      password:
+    connection:
+      useTrustStore: false
+      retries:
+      user_agent_suffix:
+      enable_cookies:
+      enable_circular_redirects:
+      timeout:
+    maximum_component_age:
+    maximum_metadata_age:
+    negative_cache_enabled:
+    negative_cache_ttl:
+    cleanup_policies:
+      - policy-1
   apt:
-    - name: ubuntu-apt
-      format: apt
-      online: true
-      blocked: false
-      auto_block: true
-      distribution: bionic
-      flat: false
-      remote:
-        url: http://archive.ubuntu.com/ubuntu/
-        username:
-        password:
-      connection:
-        useTrustStore: false
-        retries:
-        user_agent_suffix:
-        enable_cookies:
-        enable_circular_redirects:
-        timeout:
-      maximum_component_age:
-      maximum_metadata_age:
-      negative_cache_enabled:
-      negative_cache_ttl:
-      cleanup_policies:
-        - policy-1
+    name: ubuntu-apt
+    format: apt
+    online: true
+    blocked: false
+    auto_block: true
+    distribution: bionic
+    flat: false
+    remote:
+      url: http://archive.ubuntu.com/ubuntu/
+      username:
+      password:
+    connection:
+      useTrustStore: false
+      retries:
+      user_agent_suffix:
+      enable_cookies:
+      enable_circular_redirects:
+      timeout:
+    maximum_component_age:
+    maximum_metadata_age:
+    negative_cache_enabled:
+    negative_cache_ttl:
+    cleanup_policies:
+      - policy-1
   helm:
-    - name: helm-proxy
-      format: helm
-      online: true
-      blocked: false
-      auto_block: true
-      remote:
-        url: https://kubernetes-charts.storage.googleapis.com
-        username:
-        password:
-      connection:
-        useTrustStore: false
-        retries:
-        user_agent_suffix:
-        enable_cookies:
-        enable_circular_redirects:
-        timeout:
-      maximum_component_age:
-      maximum_metadata_age:
-      negative_cache_enabled:
-      negative_cache_ttl:
-      cleanup_policies:
-        - policy-1
+    name: helm-proxy
+    format: helm
+    online: true
+    blocked: false
+    auto_block: true
+    remote:
+      url: https://kubernetes-charts.storage.googleapis.com
+      username:
+      password:
+    connection:
+      useTrustStore: false
+      retries:
+      user_agent_suffix:
+      enable_cookies:
+      enable_circular_redirects:
+      timeout:
+    maximum_component_age:
+    maximum_metadata_age:
+    negative_cache_enabled:
+    negative_cache_ttl:
+    cleanup_policies:
+      - policy-1
   r:
-    - name: r-proxy
-      format: r
-      online: true
-      blocked: false
-      auto_block: true
-      remote:
-        url: https://cran.r-project.org
-        username:
-        password:
-      connection:
-        useTrustStore: false
-        retries:
-        user_agent_suffix:
-        enable_cookies:
-        enable_circular_redirects:
-        timeout:
-      maximum_component_age:
-      maximum_metadata_age:
-      negative_cache_enabled:
-      negative_cache_ttl:
-      cleanup_policies:
-        - policy-1
+    name: r-proxy
+    format: r
+    online: true
+    blocked: false
+    auto_block: true
+    remote:
+      url: https://cran.r-project.org
+      username:
+      password:
+    connection:
+      useTrustStore: false
+      retries:
+      user_agent_suffix:
+      enable_cookies:
+      enable_circular_redirects:
+      timeout:
+    maximum_component_age:
+    maximum_metadata_age:
+    negative_cache_enabled:
+    negative_cache_ttl:
+    cleanup_policies:
+      - policy-1
   raw:
-    - name: raw-proxy
-      format: raw
-      online: true
-      blocked: false
-      auto_block: true
-      remote:
-        url: https://www.jfrog.com/
-        username:
-        password:
-      connection:
-        useTrustStore: false
-        retries:
-        user_agent_suffix:
-        enable_cookies:
-        enable_circular_redirects:
-        timeout:
-      maximum_component_age:
-      maximum_metadata_age:
-      negative_cache_enabled:
-      negative_cache_ttl:
-      cleanup_policies:
-        - policy-1
-      contentDisposition:
+    name: raw-proxy
+    format: raw
+    online: true
+    blocked: false
+    auto_block: true
+    remote:
+      url: https://www.jfrog.com/
+      username:
+      password:
+    connection:
+      useTrustStore: false
+      retries:
+      user_agent_suffix:
+      enable_cookies:
+      enable_circular_redirects:
+      timeout:
+    maximum_component_age:
+    maximum_metadata_age:
+    negative_cache_enabled:
+    negative_cache_ttl:
+    cleanup_policies:
+      - policy-1
+    contentDisposition:
   conda:
-    - name: conda-proxy
-      format: conda
-      online: true
-      blocked: false
-      auto_block: true
-      remote:
-        url: https://repo.anaconda.com/pkgs/main
-        username:
-        password:
-      connection:
-        useTrustStore: false
-        retries:
-        user_agent_suffix:
-        enable_cookies:
-        enable_circular_redirects:
-        timeout:
-      maximum_component_age:
-      maximum_metadata_age:
-      negative_cache_enabled:
-      negative_cache_ttl:
-      cleanup_policies:
-        - policy-1
+    name: conda-proxy
+    format: conda
+    online: true
+    blocked: false
+    auto_block: true
+    remote:
+      url: https://repo.anaconda.com/pkgs/main
+      username:
+      password:
+    connection:
+      useTrustStore: false
+      retries:
+      user_agent_suffix:
+      enable_cookies:
+      enable_circular_redirects:
+      timeout:
+    maximum_component_age:
+    maximum_metadata_age:
+    negative_cache_enabled:
+    negative_cache_ttl:
+    cleanup_policies:
+      - policy-1
   go:
-    - name: go-proxy
-      format: go
-      online: true
-      blocked: false
-      auto_block: true
-      remote:
-        url: https://proxy.golang.org
-        username:
-        password:
-      connection:
-        useTrustStore: false
-        retries:
-        user_agent_suffix:
-        enable_cookies:
-        enable_circular_redirects:
-        timeout:
-      maximum_component_age:
-      maximum_metadata_age:
-      negative_cache_enabled:
-      negative_cache_ttl:
-      cleanup_policies:
-        - policy-1
+    name: go-proxy
+    format: go
+    online: true
+    blocked: false
+    auto_block: true
+    remote:
+      url: https://proxy.golang.org
+      username:
+      password:
+    connection:
+      useTrustStore: false
+      retries:
+      user_agent_suffix:
+      enable_cookies:
+      enable_circular_redirects:
+      timeout:
+    maximum_component_age:
+    maximum_metadata_age:
+    negative_cache_enabled:
+    negative_cache_ttl:
+    cleanup_policies:
+      - policy-1
   yum:
-    - name: yum-proxy
-      format: yum
-      online: true
-      blocked: false
-      auto_block: true
-      remote:
-        url: http://mirror.centos.org/centos/
-        username:
-        password:
-      connection:
-        useTrustStore: false
-        retries:
-        user_agent_suffix:
-        enable_cookies:
-        enable_circular_redirects:
-        timeout:
-      maximum_component_age:
-      maximum_metadata_age:
-      negative_cache_enabled:
-      negative_cache_ttl:
-      cleanup_policies:
-        - policy-1
+    name: yum-proxy
+    format: yum
+    online: true
+    blocked: false
+    auto_block: true
+    remote:
+      url: http://mirror.centos.org/centos/
+      username: ''
+      password: ''
+    connection:
+      retries: 5
+      user_agent_suffix: 'cn'
+      enable_cookies: false
+      enable_circular_redirects: false
+      timeout: ''
+    maximum_component_age:
+    maximum_metadata_age:
+    negative_cache_enabled:
+    negative_cache_ttl:
+    cleanup_policies:
+      - policy-1
 group_defaults:
   maven:
   python:
