--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -141,12 +141,23 @@
 
     - name: Apply defaults to repositories configurations and process a single list
       ansible.builtin.include_tasks: process_repos_list.yml
+      vars:
+        use_api: "{{ nexus_use_api_for_provisioning | default(false) | bool }}"
 
     - name: Create configured repositories
       ansible.builtin.include_tasks: call_script.yml
       vars:
         script_name: create_repos_from_list
         call_args: "{{ _nexus_repos_global_list | d([]) }}"
+      when: not nexus_use_api_for_provisioning | default(false) | bool
+
+    - name: Create configured repositories using Nexus API
+      ansible.builtin.include_tasks: create_repos.yml
+      vars:
+        api_payload: "{{ item | default([]) }}"
+      loop:
+        - "{{ nexus_repos_maven_proxy }}"
+      when: nexus_use_api_for_provisioning | default(false) | bool
 
     - name: Create/check privileges
       ansible.builtin.include_tasks: call_script.yml
